gdm (2.18.1-3) UNRELEASED; urgency=low

  * Add support for DEB_BUILD_OPTIONS noopt option; closes: #347421.

 -- Sam Morris <sam@robots.org.uk>  Thu, 03 May 2007 22:46:17 +0100

gdm (2.18.1-2) unstable; urgency=low

  * Fix a packaging mistake introduced while refactoring the install which
    overwrote Debian's /etc/gdm/Xsession with upstream's.
  * Set GNOME Team as Maintainer.

 -- Loic Minier <lool@dooz.org>  Thu, 03 May 2007 14:42:24 +0200

gdm (2.18.1-1) unstable; urgency=low

  * Adopt package; set myself as Maintainer; thanks Ryan Murray for your
    maintenance until now!
  * Ack Porter NMU by Aurélien Jarno; thanks!
  * GNOME Team uploads.
    - Use a control.in.
    - Build-depend on gnome-pkg-tools and include uploaders.mk.
  * Use the quilt patch system instead of keeping changes in the .diff.gz.
    - Apply / unapply patches in rules; "patch" is PHONY.
    - Split the current .diff.gz into 20 patches.
    - Create a series file with all patches.
    - Build-depend on quilt.
    - "make distclean" before unpatching.
  * New patch, 68_doc-build-add-revnumber, fixes build with newer
    gnome-doc-utils.
  * Use full path to gdmsetup in menu file.
  * Fix "closes:" in 2.2.5.2-1 and 2.13.0.10-1.
  * Version the debhelper build-dep to >= 4 and set Debhelper compatibility
    level via debian/compat to 4 instead of via DH_COMPAT in rules.
  * Depend on "debconf (>= 0.5) | debconf-2.0" instead of the only virtual
    "debconf-2.0".
  * Wrap build-deps and deps.
  * Update copyright file.
    - Use full download URL.
    - Include full GPL blob.
    - List GNOME Team as new maintainer.
  * Include AUTHORS in docs.
  * Compute DEB_VERSION, DEB_NOEPOCH_VERSION, and DEB_UPSTREAM_VERSION
    similarly to CDBS and finally compute MAJOR_MINOR for the GNOME version
    included in the footer of man pages.
  * Update watch file to track all stable releases.
  * Misc cleanups.
  * Bump up Debhelper compatibility level to 5.