@@ -1,8 +1,12 @@
 gdm (2.18.1-3) UNRELEASED; urgency=low
 
+  [ Sam Morris ]
   * Add support for DEB_BUILD_OPTIONS noopt option; closes: #347421.
 
- -- Sam Morris <sam@robots.org.uk>  Thu, 03 May 2007 22:46:17 +0100
+  [ Loic Minier ]
+  * Pass -Wall to CFLAGS too.
+
+ -- Loic Minier <lool@dooz.org>  Fri, 04 May 2007 07:55:32 +0200
 
 gdm (2.18.1-2) unstable; urgency=low
 
